# opentelemetry-cpp-demo-app

./: BaseDependencyDockerFile  BaseDependencyMakefile  README.md
enroll-employee/: CMakeLists.txt  Dockerfile  build-instructions.txt  enroll_employee.cpp  runtime-env-file.env  runtime-instructions.txt  tracer_common.h
manage-employee/: CMakeLists.txt  Dockerfile  build-instructions.txt  manage_employee.cpp  runtime-env-file.env  runtime-instructions.txt  tracer_common.h
